# ZhoConverterQt

./: CMakeLists.txt  CMakeUserPresets.json  README.md  Resource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.cmake  zhoconverterqt.rc
minizip-reduced/: mz_zip_rw.h
minizip-reduced/include/minizip/: mz_zip_rw.h
minizip-reduced/lib/cmake/minizip/: minizip-release.cmake  minizip.cmake
minizip-reduced/lib/pkgconfig/: minizip.pc
opencc-fmmseg/: OpenccFmmsegHelper.hpp  opencc_fmmseg_capi.dll.lib
pdfium/: CjkText.hpp  PdfExtractWorker.cpp  PdfExtractWorker.h  PdfiumHelper.hpp  PunctSets.hpp  ReflowCommon.hpp  ReflowHelper.hpp  batchworker.cpp  batchworker.h
src/: AboutDialog.cpp  AboutDialog.h  OfficeConverter.hpp  OfficeConverterMinizip.hpp  OfficeDocConverter.hpp  ZipPathUtils.hpp  draglistwidget.cpp  draglistwidget.h  filetype_utils.cpp  filetype_utils.h  texteditwidget.cpp  texteditwidget.h  zhoutilities.cpp  zhoutilities.h
